# PolicyMitra

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
agents/: audit.py  base.py  comparison_agent.py  drafting_agent.py  guardrail_agent.py  llm_client.py  numeric_extraction.py  orchestrator.py  qa_agent.py  recommendation_agent.py  retrieval_agent.py  router_agent.py
agents/prompts/: drafting_v1.md  guardrail_repair_v1.md  qa_v1.md  recommendation_v1.md  router_v1.md
api/: deps.py  main.py  rate_limit.py
api/routes/: agent_notes.py  audit.py  comparison.py  drafting.py  health.py  profile.py  qa.py  recommendation.py
api/schemas/: agent_notes.py  common.py  comparison.py  drafting.py  profile.py  qa.py  recommendation.py
db/: connection.py  migrate.py
db/schema/: 000_extensions.sql  001_kb_schema.sql  002_session_memory.sql  003_profile_memory.sql  004_agent_notes.sql  005_audit_log.sql
docs/: PRD.md  agents.md  architecture.md  memory.md  skills.md
eval/: run_all.py
eval/golden_set/: qa_pairs.yaml  recommendation_scenarios.yaml
eval/harness/: report.py  run_faithfulness_eval.py  run_recommendation_eval.py  run_retrieval_eval.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
ingestion/: cli.py  pipeline.py
retrieval/: bm25_index.py  dense_index.py  hybrid.py  models.py  query_rewrite.py  reranker.py  store.py
(+42 files in other folders)
